src/lessa/ExprParser.java
package lessa;

// Generated from Expr.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, ADDMINOP=12, MULDIVOP=13, CLASS=14, DEF=15, RETURN=16, 
		CONTINUE=17, FOR=18, WHILE=19, BREAK=20, IN=21, IF=22, ELSE=23, ELIF=24, 
		NOT=25, AND=26, OR=27, DEL=28, THIS=29, FROM=30, IMPORT=31, AS=32, GLOBAL=33, 
		IS=34, NONE=35, TRUE=36, FALSE=37, NUMBER=38, FLOAT=39, NOTE=40, NAME=41, 
		ID=42, PLUSASSIGN=43, MINUSASSIGN=44, TIMESASSIGN=45, DIVIDEASSIGN=46, 
		MOD_ASSIGN=47, POWER=48, TIMES=49, DIVIDE=50, PLUS=51, MINUS=52, MOD=53, 
		EQUAL=54, NOTEQUAL=55, LE=56, GE=57, ASSIGN=58, LESS=59, GREATER=60, SHARP=61, 
		FLAT=62, COMMA=63, SEMICOLON=64, STRING=65, ESC=66, SKIP=67, NEWLINE=68, 
		LINE_BAR=69;
	public static final int
		RULE_prog = 0, RULE_single_input = 1, RULE_decorator = 2, RULE_decorators = 3, 
		RULE_decorated = 4, RULE_stmt = 5, RULE_simple_stmt = 6, RULE_small_stmt = 7, 
		RULE_del_stmt = 8, RULE_import_stmt = 9, RULE_import_name = 10, RULE_import_from = 11, 
		RULE_import_as_name = 12, RULE_dotted_as_name = 13, RULE_import_as_names = 14, 
		RULE_dotted_as_names = 15, RULE_dotted_name = 16, RULE_expr_stmt = 17, 
		RULE_compound_stmt = 18, RULE_stmt_list = 19, RULE_selection_stmt = 20, 
		RULE_iteration_stmt = 21, RULE_while_stmt = 22, RULE_for_stmt = 23, RULE_funcdef = 24, 
		RULE_classdef = 25, RULE_assign_stmt = 26, RULE_assign_operators = 27, 
		RULE_jump_stmt = 28, RULE_break_stmt = 29, RULE_continue_stmt = 30, RULE_return_stmt = 31, 
		RULE_expr_list = 32, RULE_test_list = 33, RULE_sliceop = 34, RULE_test = 35, 
		RULE_or_test = 36, RULE_and_test = 37, RULE_not_test = 38, RULE_comparison = 39, 
		RULE_comp_op = 40, RULE_expr = 41, RULE_arith_expr = 42, RULE_term = 43, 
		RULE_tone = 44, RULE_factor = 45, RULE_power = 46, RULE_atom_trailer = 47, 
		RULE_atom = 48, RULE_listmaker_test = 49, RULE_trailer = 50, RULE_sequencemaker = 51, 
		RULE_songmaker = 52, RULE_subscriptlist = 53, RULE_subscript = 54, RULE_arglist = 55, 
		RULE_argument = 56, RULE_list_iter = 57, RULE_list_for = 58, RULE_list_if = 59, 
		RULE_comp_iter = 60, RULE_comp_for = 61, RULE_comp_if = 62, RULE_testlist1 = 63, 
		RULE_parameters = 64, RULE_varargslist = 65, RULE_fpdef = 66, RULE_fplist = 67;
	public static final String[] ruleNames = {
		"prog", "single_input", "decorator", "decorators", "decorated", "stmt", 
		"simple_stmt", "small_stmt", "del_stmt", "import_stmt", "import_name", 
		"import_from", "import_as_name", "dotted_as_name", "import_as_names", 
		"dotted_as_names", "dotted_name", "expr_stmt", "compound_stmt", "stmt_list", 
		"selection_stmt", "iteration_stmt", "while_stmt", "for_stmt", "funcdef", 
		"classdef", "assign_stmt", "assign_operators", "jump_stmt", "break_stmt", 
		"continue_stmt", "return_stmt", "expr_list", "test_list", "sliceop", "test", 
		"or_test", "and_test", "not_test", "comparison", "comp_op", "expr", "arith_expr", 
		"term", "tone", "factor", "power", "atom_trailer", "atom", "listmaker_test", 
		"trailer", "sequencemaker", "songmaker", "subscriptlist", "subscript", 
		"arglist", "argument", "list_iter", "list_for", "list_if", "comp_iter", 
		"comp_for", "comp_if", "testlist1", "parameters", "varargslist", "fpdef", 
		"fplist"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'@'", "'('", "')'", "'.'", "'{'", "'}'", "':'", "'<>'", "'''", 
		"'['", "']'", null, null, "'class'", "'def'", "'return'", "'continue'", 
		"'for'", "'while'", "'break'", "'in'", "'if'", "'else'", "'elif'", "'not'", 
		"'and'", "'or'", "'del'", "'this'", "'from'", "'import'", "'as'", "'global'", 
		"'is'", "'None'", "'True'", "'False'", null, null, null, null, null, "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'**'", "'*'", "'/'", "'+'", "'-'", "'%'", 
		"'=='", "'!='", "'<='", "'>='", "'='", "'<'", "'>'", "'#'", "'~'", "','", 
		"';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"ADDMINOP", "MULDIVOP", "CLASS", "DEF", "RETURN", "CONTINUE", "FOR", "WHILE", 
		"BREAK", "IN", "IF", "ELSE", "ELIF", "NOT", "AND", "OR", "DEL", "THIS", 
		"FROM", "IMPORT", "AS", "GLOBAL", "IS", "NONE", "TRUE", "FALSE", "NUMBER", 
		"FLOAT", "NOTE", "NAME", "ID", "PLUSASSIGN", "MINUSASSIGN", "TIMESASSIGN", 
		"DIVIDEASSIGN", "MOD_ASSIGN", "POWER", "TIMES", "DIVIDE", "PLUS", "MINUS", 
		"MOD", "EQUAL", "NOTEQUAL", "LE", "GE", "ASSIGN", "LESS", "GREATER", "SHARP", 
		"FLAT", "COMMA", "SEMICOLON", "STRING", "ESC", "SKIP", "NEWLINE", "LINE_BAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Single_inputContext single_input() {
			return getRuleContext(Single_inputContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			single_input();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_inputContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Single_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_input; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitSingle_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_inputContext single_input() throws RecognitionException {
		Single_inputContext _localctx = new Single_inputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_single_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__4) | (1L << T__8) | (1L << T__9) | (1L << CLASS) | (1L << DEF) | (1L << RETURN) | (1L << CONTINUE) | (1L << FOR) | (1L << WHILE) | (1L << BREAK) | (1L << IF) | (1L << DEL) | (1L << THIS) | (1L << FROM) | (1L << IMPORT) | (1L << NONE) | (1L << TRUE) | (1L << FALSE) | (1L << NUMBER) | (1L << NOTE) | (1L << NAME) | (1L << PLUS) | (1L << MINUS) | (1L << SHARP) | (1L << FLAT))) != 0) || _la==SEMICOLON || _la==STRING) {
				{
				{
				setState(138);
				stmt();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecoratorContext extends ParserRuleContext {
		public Dotted_nameContext dotted_name() {
			return getRuleContext(Dotted_nameContext.class,0);
		}
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitDecorator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorContext decorator() throws RecognitionException {
		DecoratorContext _localctx = new DecoratorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decorator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__0);
			setState(145);
			dotted_name();
			setState(151);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(146);
				match(T__1);
				setState(148);
				_la = _input.LA(1);
				if (((((_la - 2)) & ~0x3f) == 0 && ((1L << (_la - 2)) & ((1L << (T__1 - 2)) | (1L << (T__4 - 2)) | (1L << (T__8 - 2)) | (1L << (T__9 - 2)) | (1L << (NOT - 2)) | (1L << (THIS - 2)) | (1L << (NONE - 2)) | (1L << (TRUE - 2)) | (1L << (FALSE - 2)) | (1L << (NUMBER - 2)) | (1L << (NOTE - 2)) | (1L << (NAME - 2)) | (1L << (POWER - 2)) | (1L << (TIMES - 2)) | (1L << (PLUS - 2)) | (1L << (MINUS - 2)) | (1L << (SHARP - 2)) | (1L << (FLAT - 2)) | (1L << (STRING - 2)))) != 0)) {
					{
					setState(147);
					arglist();
					}
				}

				setState(150);
				match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecoratorsContext extends ParserRuleContext {
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public DecoratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorators; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitDecorators(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorsContext decorators() throws RecognitionException {
		DecoratorsContext _localctx = new DecoratorsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decorators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				decorator();
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecoratedContext extends ParserRuleContext {
		public DecoratorsContext decorators() {
			return getRuleContext(DecoratorsContext.class,0);
		}
		public ClassdefContext classdef() {
			return getRuleContext(ClassdefContext.class,0);
		}
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public DecoratedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorated; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitDecorated(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratedContext decorated() throws RecognitionException {
		DecoratedContext _localctx = new DecoratedContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decorated);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			decorators();
			setState(161);
			switch (_input.LA(1)) {
			case CLASS:
				{
				setState(159);
				classdef();
				}
				break;
			case DEF:
				{
				setState(160);
				funcdef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SELECTSTMTContext extends StmtContext {
		public Selection_stmtContext selection_stmt() {
			return getRuleContext(Selection_stmtContext.class,0);
		}
		public SELECTSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitSELECTSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FUNCDEFSTMTContext extends StmtContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public FUNCDEFSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitFUNCDEFSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DECORATEDSTMTContext extends StmtContext {
		public DecoratedContext decorated() {
			return getRuleContext(DecoratedContext.class,0);
		}
		public DECORATEDSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitDECORATEDSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JMPSTMTContext extends StmtContext {
		public Jump_stmtContext jump_stmt() {
			return getRuleContext(Jump_stmtContext.class,0);
		}
		public JMPSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitJMPSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ITRSTMTContext extends StmtContext {
		public Iteration_stmtContext iteration_stmt() {
			return getRuleContext(Iteration_stmtContext.class,0);
		}
		public ITRSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitITRSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CLASSDEFSTMTContext extends StmtContext {
		public ClassdefContext classdef() {
			return getRuleContext(ClassdefContext.class,0);
		}
		public CLASSDEFSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitCLASSDEFSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SIMPLESTMTContext extends StmtContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public SIMPLESTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitSIMPLESTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class COMPSTMTContext extends StmtContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public COMPSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitCOMPSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EXPRSTMTContext extends StmtContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public EXPRSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitEXPRSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ASSIGNSTMTContext extends StmtContext {
		public Assign_stmtContext assign_stmt() {
			return getRuleContext(Assign_stmtContext.class,0);
		}
		public ASSIGNSTMTContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprVisitor ) return ((ExprVisitor<? extends T>)visitor).visitASSIGNSTMT(this);
			else return visitor.visitChildren(this);
		}
	}
